# podcast-automation

./: .coverage  .env.example  .gitignore  CLAUDE.md  DETAILED_TOPIC_ANALYSIS.md  DROPBOX_TOKEN_SETUP.md  FINAL_SUMMARY.txt  GOOGLE_DOCS_TOPIC_TRACKER.md  HISTORICAL_EPISODES_PROCESSING.md  INSTAGRAM_SETUP_QUICK_REF.md  INSTALL_FFMPEG.md  MARKETING_STRATEGY.md  MONTHLY_RELEASE_STRATEGY.md  NOTION_MIGRATION_COMPLETE.md  NOTION_SETUP.md  ONBOARDING.md  OUTPUT_ORGANIZATION_SUMMARY.md  PIPELINE_UPGRADE_AUDIT.md  PROJECT_STATUS.md  QUICKSTART_GOOGLE_DOCS.md  QUICKSTART_RSS.md  QUICKSTART_TOPIC_ENGINE.md  QUICK_START.md  README.md  RSS_FEED_SETUP.md  RSS_IMPLEMENTATION_COMPLETE.md  SETUP.md  SOCIAL_MEDIA_SETUP.md  SPOTIFY_RSS_AUTOMATION.md  TOPIC_ANALYSIS_SUMMARY.md  TOPIC_ENGINE_GUIDE.md  TOPIC_ENGINE_SUMMARY.md  YOUTUBE_TOKEN_EXPLANATION.md  analytics.py  audio_clip_scorer.py  audio_processor.py  audiogram_generator.py  autoresearch-coverage.tsv  autoresearch-results.tsv  backlog_refinement.py  (+83 more)
.githooks/: pre-commit
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
clients/: README.md  business-interview-client.yaml  church-template.yaml  client-template.yaml  do-more-by-doing-less.yaml  example-client.yaml  fake-problems.yaml  honey-and-hustle.yaml  true-crime-client.yaml
docs/: README.md  client-onboarding-checklist.md  configuration-guide.md  project-overview.md  system-architecture.md  testing-guide.md
pipeline/: __init__.py  analytics_runner.py  (+5 more)
(+379 files in other folders)
